[project]
name = "list-updater"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["typer>=0.21.1"]

[dependency-groups]
dev = ["ruff>=0.14.11", "mypy>=1.19.1", "taskipy>=1.14.1"]

[tool.taskipy.tasks]
lint = "ruff check main.py list_updater/"
format = "ruff format main.py list_updater/"
format-check = "ruff format --check main.py list_updater/"
typecheck = "mypy main.py list_updater/"
check = "task lint && task format-check && task typecheck"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
